versioned_docs/version-1.4.x/aihuman/windows-sdk/sample-project/quick-start.md
---
sidebar_position: 2
---

# AI Human QuickStart

:::note related files

- QuickStartView.xaml
- QuickStartViewModel.cs

:::

In Quick Start, the following screen appears when the default AI creation and pre-preparation step is completed through AIPlayer. It may take several minutes until it starts speaking depending on the network conditions, as there is a default loading time on the first run. After the first utterance, you can press the input box at the bottom of the screen to type in a sentence that you want to make the AI say.  The default AI is Jonathan. (Basically speaking a language that corresponds to the language value set in AI. However, you can implement multilingual services using the following [Change the Voice or Language](../aiplayer/advanced-features) functionality.)

<img src="/img/aihuman/windows/Jonathan_demo.png" />

- Speak or Enter: Jonathan speaks the sentence entered in the TextBox at the bottom right.
- Home: Go to HomeView.xaml
- Exit: Close the app.
